--- a/.github/workflows/ci-default.yml
+++ b/.github/workflows/ci-default.yml
@@ -34,6 +34,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           # Fetch all history so gitlint can check the relevant commits.
           fetch-depth: "0"
+      - run: corepack enable
 
       - name: Install dependencies
         uses: pnpm/action-setup@v4
