--- a/package.json
+++ b/package.json
@@ -67,5 +67,6 @@
     "test": "vitest run",
     "test:watch": "vitest --watch",
     "types:json": "pnpm json2ts -i './src/resources/schema/' -o 'src/types' --cwd './src/resources/schema'"
-  }
+  },
+  "packageManager": "pnpm@9.2.0+sha256.94fab213df221c55b6956b14a2264c21c6203cca9f0b3b95ff2fe9b84b120390"
 }
