--- a/.github/workflows/create-release-sdk.yml
+++ b/.github/workflows/create-release-sdk.yml
@@ -37,7 +37,7 @@ jobs:
         run: pnpm test
 
   semantic-release:
-    needs: test
+    needs: build-and-test
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
 
     name: Semantic Release
