--- a/.github/workflows/create-release-sdk.yml
+++ b/.github/workflows/create-release-sdk.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+
       - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
