--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,13 +1,7 @@
 name: Build and release - staging
 
 on:
-  push:
-    branches:
-      - main
-      - dev/*
-      - feat/*
-      - feature/*
-      - hotfix/*
+  pull_request:
 
 jobs:
   build-and-test:
@@ -37,50 +31,3 @@ jobs:
 
       - name: Run tests
         run: pnpm test
-
-  semantic-release:
-    needs: build-and-test
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-
-    name: Semantic Release
-    runs-on: ubuntu-latest
-    environment: staging
-    permissions:
-      contents: write
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "lts/*"
-
-      - name: Prepare prerelease semantic
-        if: github.ref != 'refs/heads/main'
-        run: mv .releaserc.prerelease.yaml .releaserc.yaml
-
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v4
-        id: semantic   # Need an `id` for output variables
-        with:
-          dry_run: true
-          extra_plugins: |
-            @semantic-release/commit-analyzer
-            @semantic-release/release-notes-generator
-            @semantic-release/changelog
-            @semantic-release/github
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PA_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Do something when a new release published
-        if: steps.semantic.outputs.new_release_published == 'true'
-        run: |
-          echo ${{ steps.semantic.outputs.new_release_version }}
-          echo ${{ steps.semantic.outputs.new_release_major_version }}
-          echo ${{ steps.semantic.outputs.new_release_minor_version }}
-          echo ${{ steps.semantic.outputs.new_release_patch_version }}
