fix: set up beta prerelease

--- a/.releaserc.prerelease.yaml
+++ b/.releaserc.prerelease.yaml
@@ -15,3 +15,5 @@ branches:
     prerelease: '${name.replace(/^hotfix\//g, "fix-").replace(/\//g, "-")}'
   - name: fix/*
     prerelease: '${name.replace(/^fix\//g, "fix-").replace(/\//g, "-")}'
+  - name: feat/init
+    prerelease: 'beta'
