--- a/.releaserc.prerelease.yaml
+++ b/.releaserc.prerelease.yaml
@@ -3,6 +3,7 @@ plugins:
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/changelog"
   - "@semantic-release/github"
+  - "@semantic-release/npm"
 
 branches:
   - "+([0-9])?(.{+([0-9]),x}).x"
