chore: add pnpm to build env

--- a/.github/workflows/create-prerelease-sdk.yml
+++ b/.github/workflows/create-prerelease-sdk.yml
@@ -54,9 +54,16 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
         with:
-          node-version: "lts/*"
+          run_install: false
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
 
       - name: Prepare prerelease semantic
         if: github.ref != 'refs/heads/main'
