--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypercerts-org/sdk",
-  "version": "2.0.0-alpha.37",
+  "version": "2.1.1",
   "description": "SDK for hypercerts protocol",
   "repository": "git@github.com:hypercerts-org/hypercerts-sdk.git",
   "author": "Hypercerts team",
