fix(pnpm): install step in prerelease

--- a/.github/workflows/dryrun-release-ci-sdk.yml
+++ b/.github/workflows/dryrun-release-ci-sdk.yml
@@ -60,6 +60,9 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Prepare prerelease semantic
         if: github.ref != 'refs/heads/main'
         run: mv .releaserc.prerelease.yaml .releaserc.yaml
