--- a/.github/workflows/create-prerelease-sdk.yml
+++ b/.github/workflows/create-prerelease-sdk.yml
@@ -62,6 +62,9 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Prepare prerelease semantic
         if: github.ref != 'refs/heads/main'
         run: mv .releaserc.prerelease.yaml .releaserc.yaml
