--- a/.github/workflows/create-release-sdk.yml
+++ b/.github/workflows/create-release-sdk.yml
@@ -31,8 +31,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run tests
-        run: pnpm test
+      - name: 'Run unit tests'
+        run: npx vitest --coverage.enabled true
+        
+      - name: 'Report Coverage'
+        # Set if: always() to also generate the report if tests are failing
+        # Only works if you set `reportOnFailure: true` in your vite config as specified above
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v2
 
   semantic-release:
     needs: build-and-test
