fix(api): replace submodule with http path
replaces api submodule with endpoint call to build orval client

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "scripts": {
     "build": "pnpm types:json && pnpm codegen:api && rollup -c",
-    "codegen:api": "npx orval --input ./lib/hypercerts-api/src/__generated__/swagger.json --output ./src/__generated__/api.ts",
+    "codegen:api": "npx orval --input https://api.hypercerts.org/swagger.json --output ./src/__generated__/api.ts",
     "clean": "rm -rf ./dist",
     "prebuild": "pnpm clean",
     "prepack": "pnpm build",
